@@ -1,3 +1,8 @@
+Tue Aug 15 21:13:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Various bits of work done to Quartz.  Now opens a DB environment,
+	  or would if it were given an appropriate path.
+
 Tue Aug 15 20:39:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Correct library name to link against for BerkeleyDB 3.1, from libdb
